# rpmbuild-order

./: .gitignore  .stack-all  .travis.yml  ChangeLog  ChangeLog.md  LICENSE  MAINTAINER-NOTES  Main.hs  Makefile  README.md  RpmbuildOrder.hs  TODO  make-dist  rpmbuild-order.1  rpmbuild-order.cabal  stack-ghc810.yaml  stack-lts10.yaml  stack-lts11.yaml  stack-lts12.yaml  stack-lts13.yaml  stack-lts14.yaml  stack.yaml
.github/workflows/: build.yml
src/: Main.hs  RpmbuildOrder.hs
test/: Spec.hs
test/pkgs/A/: A.spec
test/pkgs/B/: B.spec
test/pkgs/C/: C.spec
test/pkgs/D1.0/: D1.0.spec
test/pkgs/cmake/A/: A.spec
test/pkgs/cmake/B/: B.spec
test/pkgs/dynbr/A/: A.spec
test/pkgs/pkgconf/A/: A.spec
test/pkgs/pkgconf/C/: C.spec
