Name:             rpmbuild-order
Version:          0.1
License:          BSD3
License-File:     LICENSE
Author:           Henning Thielemann <haskell@henning-thielemann.de>
Maintainer:       Jens Petersen <petersen@redhat.com>
Category:         Distribution
Synopsis:         Topologically sort RPM packages
Description:
  If you have a bunch of packages you want to build,
  then you should build them in dependency order.
  Given a number of RPM spec files, this program reads all the files
  and emits them topologically sorted according to their dependencies.
  This way you can compile many packages at once,
  say if a low-level package has changed.
Tested-with:       GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4,
                   GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2,
                   GHC == 8.4.2
Cabal-Version:     >=1.6
Build-Type:        Simple

Executable rpmbuild-order
  Build-Depends:
    base,
    Cabal,
    containers,
    directory,
    explicit-exception,
    filepath,
    fgl, 
    process,
    transformers

  GHC-Options:      -Wall
  Main-Is:          RpmbuildOrder.hs
  Extensions:         CPP
